# BayesTourney

./: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg
data/: backup_db.sh  mydb.db
docs/: _config.yml  index.md  math.md  settings.md
instance/: config.py  example.env
src/: initialize_db.sh  lordbayes.py  metropolis.ipynb  playermodel.py  runtests.sh  setup.cfg  startdocker.sh  startserver.sh
src/bayestourney/: __init__.py  app.py  auth.py  database.py  email.py  legacy_endpoints.py  models.py  permissions.py  settings.py  settings_constants.py  stat_utils.py  wrappers.py
src/bayestourney/views/: admin.html  base.html  bout_settings_dlg.html  bouts.html  entrants.html  forms_entrants_create.html  forms_tourneys_create.html  horserace.html  horserace_who_fought_who_dlg.html  horserace_who_is_winning_dlg.html  info.html  macros.html  notimpl.html  player_settings_dlg.html  prefs.html  tourneys.html  tourneys_settings_dlg.html
src/instance/: config.py  example.env
src/lordbayes/: auth.py  database.py  lordbayes_server.py  models.py  settings.py  stat_utils.py
src/lordbayes/views/: base.html  base.tpl  bouts.html  bouts.tpl  entrants.tpl  horserace.html  horserace.tpl  info.html  info.tpl  macros.html  misc.tpl  prefs.html  site_map.html  test.tpl  top.tpl  tourneys.html  tourneys.tpl
src/obsolete/: lordbayes.py  playermodel.py
src/server/: app.py  lordbayes_interactive.py  lordbayes_server.py  reqhandler.py  session_support.py  standalone_server.py  stat_utils.py
src/server/views/: bouts.tpl  (+5 more)
src/test/: test.py  test2.py
src/tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_download.py  test_email.py  test_endpoints.py  test_factory.py  test_horserace.py  test_models.py  test_permissions.py  test_settings.py  test_stat.py  test_upload.py
www/static/: style.css
(+29 files in other folders)
