[metadata]
name = bayestourney
description = A tournament format that uses logistic regression
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/jswelling/BayesTourney
author = Joel Welling
author_email = joel.welling@gmail.com
license = MIT
license_file = LICENSE
project_urls =
    Documentation = https://jswelling.github.io/BayesTourney/
    Source = https://github.com/jswelling/BayesTourney
    Tracker = https://github.com/jswelling/BayesTourney/issues

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    Flask
    Flask-SQLAlchemy
    pandas
    SQLAlchemy
    python-dotenv
    pygraphviz
    pytest
    coverage
    build
    setuptools
    setuptools_scm

[options.packages.find]
where=src
