[metadata]
name = bayestourney
description = A tournament format that uses logistic regression
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/jswelling/BayesTourney
author = Joel Welling
author_email = joel.welling@gmail.com
license = MIT
license_file = LICENSE
project_urls =
    Documentation = https://jswelling.github.io/BayesTourney/
    Source = https://github.com/jswelling/BayesTourney
    Tracker = https://github.com/jswelling/BayesTourney/issues

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    Flask
    Flask-SQLAlchemy
    Flask-Login
    Flask-Mail
    Flask-migrate
    pandas
    SQLAlchemy
    python-dotenv
    pygraphviz
    matplotlib
    matplotlib-inline

[options.extras_require]
test =
    pytest
    coverage

[options.packages.find]
where=src
